--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,2 @@
-spring.application.name=
-spring.datasource.url=jdbc:mysql://localhost:3306/db_adina
-spring.datasource.username=root
-spring.datasource.password=12345
-spring.jpa.hibernate.ddl-auto=update
 server.port=8081
+spring.profiles.active=${ENV:dev}
